core recommendations